--- a/hatcher_source/templates/credentials/landing_page.html
+++ b/hatcher_source/templates/credentials/landing_page.html
@@ -529,7 +529,19 @@
             <div class="container">
                 <h1>Transform Your Career with Hatcher</h1>
                 <p>Elevate your professional journey with our innovative platform. Manage your profile, explore job and internship opportunities, and achieve your career goals faster than ever before.</p>
-                <img src="/media/hatcher_ss/hatcher_dashboard.png" alt="Hatcher Dashboard" style="max-width: 100%; height: auto; margin-top: 20px;">
+                <!-- <img src="/media/hatcher_ss/hatcher_dashboard.png" alt="Hatcher Dashboard" style="max-width: 100%; height: auto; margin-top: 20px;"> -->
+                <!-- <iframe width="800" height="600" 
+                src="https://www.youtube.com/embed/-IdJCg-EybA?autoplay=1&loop=1&playlist=-IdJCg-EybA&mute=1" 
+                frameborder="0" 
+                allow="autoplay; encrypted-media" 
+                allowfullscreen>
+                </iframe> -->
+                <video width="100%" autoplay loop muted playsinline style="box-shadow: 0 0 7px gray;border-radius: 8px;">
+                    <source src="/media/hatcher.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                
+            
             </div>
         </section>
 
