--- a/hatcher_source/templates/email_temp/job_application_success.html
+++ b/hatcher_source/templates/email_temp/job_application_success.html
@@ -1,4 +1,4 @@
-<div class="success-card" style="background-color: #553652; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 40px;  max-width: 300px; width: 100%;">
+<div class="success-card" style="background-color: #553652; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 40px;  max-width: 300px; width: 80%; margin: auto;">
   <div>
     <img src="https://i.postimg.cc/3Nh5d1PY/hatcher-tab.png" width="60px" alt="">
   </div>
