Removing comment model temporarly

--- a/hatcher_source/templates/emp_dashboard/candidates_profile.html
+++ b/hatcher_source/templates/emp_dashboard/candidates_profile.html
@@ -33,7 +33,7 @@
 }
 .add_sticky {
     position: sticky;
-    top: 54px;
+    top: 60px;
     z-index: 1000;
     background: #fff;
     padding-top: 12px;
@@ -786,7 +786,7 @@
             <li class="profile-summary">
                 <a href="#profile-summary">Profile summary</a>
             </li>
-            <li><a href="#accomplishments">Accomplishments</a></li>
+            <!-- <li><a href="#accomplishments">Accomplishments</a></li> -->
             <!-- <li><a href="#competitive-exams">Competitive exams</a></li> -->
             <li><a href="#employment">Employment</a></li>
             <!-- <li><a href="#academic-achievements">Academic achievements</a></li> -->
