--- a/hatcher_source/templates/emp_dashboard/home.html
+++ b/hatcher_source/templates/emp_dashboard/home.html
@@ -67,7 +67,7 @@
       </a>
       <hr>
       <h5>Registered company</h5>
-      <div class="list_cmp  overflow-auto" style="height: 200px;">
+      <div class="list_cmp  overflow-auto" style="max-height: 200px; box-shadow: none;">
       {% if company_register %}
       {% for cmp in company_register %}
       <div class="com_p border mb-2 bg-light d-flex justify-content-between p-2">
