--- a/hatcher_source/templates/emp_dashboard/add_job.html
+++ b/hatcher_source/templates/emp_dashboard/add_job.html
@@ -12,11 +12,11 @@
 {% endblock css %}
 
 {% block content %}
-<h3 class="text-center mb-3">Add Job</h3>
-<form method="POST"  class="container-fluid detail_form " action="{% url 'employer:add_job' %}" 
+<form method="POST"  class="border rounded p-3 container-fluid detail_form " action="{% url 'employer:add_job' %}" 
 style="width: 60%;">
-    {% csrf_token %}
-    
+{% csrf_token %}
+
+<h3 class="text-center mb-3">Add Job</h3>
     <!-- Job Model Fields -->
     <div class="mb-3">
         <label for="company" class="form-label">Company</label>
